Liste annonce et view annonce (twig + routing)

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,7 +17,7 @@
             <nav class="clear">
                 <ul id="menu">
                     <li><a href="?p=accueil">Accueil</a></li>
-                    <li><a href="?p=locations">Recherche de partenaire</a></li>
+                    <li><a href="{{ path('m2l_annonces_home') }}">Recherche de partenaire</a></li>
                     
                     <li><a href="{{ path('m2l_inscription') }}">Inscription</a></li>
                     <li><a href="{{ path('login') }}">Connexion</a></li>
