base.html.twig edit

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,9 +22,9 @@
                     <li><a href="{{ path('m2l_inscription') }}">Inscription</a></li>
                     <li><a href="{{ path('login') }}">Connexion</a></li>
                     
-                    <li><a href="?p=ajout-bien">Ajouter une annonce</a></li>
-                    <li><a href="?p=edit-profil">Modifier mon profil</a></li>
-                    <li><a href="?p=listing">Mes annonces</a></li>
+                    <li><a href="{{ path('m2l_annonces_add') }}">Ajouter une annonce</a></li>
+                    <li><a href="{{ path('m2l_profil_edit') }}">Modifier mon profil</a></li>
+                    <li><a href="{{ path('m2l_annonces_post') }}">Mes annonces</a></li>
                     <li><a href="?p=logout">Déconnexion</a></li>
                     
                 </ul>
