--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonces.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonces.html.twig
@@ -1,7 +1,5 @@
-{% extends '::base.html.twig' %}
-
-{% block title %} {{ parent() }} - Voir une annonce {% endblock %}
+{% extends 'M2LAnnoncesBundle::layout.html.twig' %}
 
 {% block body %}
-	hello world
+	
 {% endblock %}
