--- a/src/M2L/AnnoncesBundle/Resources/views/layout.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/layout.html.twig
@@ -2,4 +2,5 @@
 
 {% block title %} {{ parent() }} - Voir une annonce {% endblock %}
 
-{% block body %}{% endblock %}
+{% block body %}
+{% endblock %}
