--- a/src/M2L/MessagerieBundle/Resources/views/Messagerie/send.html.twig
+++ b/src/M2L/MessagerieBundle/Resources/views/Messagerie/send.html.twig
@@ -15,17 +15,15 @@
 
    <table border="1">
    	<tr>
-   		<th>De</th>
+   		<th>A</th>
    		<th>Message</th>
-   		<th>Répondre</th>
    		<th>Supprimer</th>
    		<th>Lu</th>
    	</tr>
    	{% for msg in list_msg %}
         <tr>
-        	<td>{{ msg.expediteur}}</td>
+        	<td>{{ msg.destinataire }}</td>
         	<td><a href="{{ path('messagerie_view', { "id": msg.id }) }}">{{ msg.msg }}</a></td>
-        	<td><a href="{{ path('messagerie_new_msg_user', { "user": msg.expediteur }) }}">Répondre</a></td>
         	<td><a href="{{ path('messagerie_delete', { "id":msg.id }) }}">Supprimer</a></td>
         	<td>
         		{% if msg.lu == true %}
