--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
 
             <nav class="clear">
                 <ul id="menu">
-                    <li><a href="?p=accueil">Accueil</a></li>
+                    <li><a href="{{ path('m2l_ligue_homepage') }}">Accueil</a></li>
                     <li><a href="{{ path('m2l_annonces_home') }}">Recherche de partenaire</a></li>
                     
                     <li><a href="{{ path('m2l_inscription') }}">Inscription</a></li>
