--- a/web/css/base.css
+++ b/web/css/base.css
@@ -262,6 +262,70 @@ LISTES LIGUES
 	text-align:center;
 }
 
+/*******************
+LISTE DES ANNONCES
+*******************/
+#annonces-liste {
+	list-style-type: none;
+	width: 800px;
+	margin: 0 auto;
+}
+
+#annonces-liste li {
+	background-color: white;
+	height: 175px;
+	padding:10px;
+	margin-bottom: 15px;
+	box-shadow: 5px 5px 10px rgb(150,150,150);
+}
+#annonces-liste li table {
+
+}
+#annonces-liste li table td {
+	text-align: left;
+	vertical-align: top;
+}
+.img-user {
+	text-align: center !important;
+	width: 150px;
+}
+.img-user img {
+	width: 125px;
+}
+.annonce-preview h3 {
+	margin: 0;
+	text-align: center;
+	font-weight: bold;
+	color: rgb(230,230,230);
+	background-color: rgb(0, 114, 149);
+}
+.annonce-preview p {
+	margin: 0;
+}
+.annonce-preview p span {
+	font-weight: bold;
+}
+.annonce-preview .annonce-date {
+	position: relative;
+	top: 105px;
+	left: 140px;
+	color: rgb(140,140,140);
+}
+
+/************************
+AFFICHAGE D'UNE ANNONCE
+*************************/
+#annonce-view {
+	width: 800px;
+	margin: 0 auto;
+}
+#annonce-view h3 {
+	margin-bottom: 10px;
+	text-align: center;
+	font-weight: bold;
+	color: rgb(230,230,230);
+	background-color: rgb(0, 114, 149);
+}
 
 
 /*******************
