Finition mise en page des annonces

--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/index.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/index.html.twig
@@ -7,18 +7,22 @@
 				<tr>
 					<td class="img-user">
 						<img src="#" alt="Avatar de l'utilisateur"><br/>
-						Nom de l'utilisateur
+						<span class="pseudo-utilisateur">Nom de l'utilisateur</span>
 					</td>
 					<td class="annonce-preview">
 						<h3><a href="{{ path('m2l_annonces_view', { 'id' : 1 }) }}">Titre annonce</a></h3>
 						<p>
 							<span>Sport</span><br/>
 							<span>Description :</span><br/>
-							Description abrégée de la recherche de partenaire
-							<span class="annonce-date">
-								JJ/MM/AAAA à H:i:s
-							</span>
+							Description abrégée de la recherche de partenaire... <a href="{{ path('m2l_annonces_view', { 'id' : 1 }) }}">Voir plus</a>
 						</p>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2" class="annonce-date">
+						<span>
+							JJ/MM/AAAA à H:i:s
+						</span>
 					</td>
 				</tr>
 			</table>
@@ -29,18 +33,22 @@
 				<tr>
 					<td class="img-user">
 						<img src="#" alt="Avatar de l'utilisateur"><br/>
-						Nom de l'utilisateur
+						<span class="pseudo-utilisateur">Nom de l'utilisateur</span>
 					</td>
 					<td class="annonce-preview">
-						<h3>Titre annonce</h3>
+						<h3><a href="{{ path('m2l_annonces_view', { 'id' : 1 }) }}">Titre annonce</a></h3>
 						<p>
 							<span>Sport</span><br/>
 							<span>Description :</span><br/>
-							Description abrégée de la recherche de partenaire
-							<span class="annonce-date">
-								JJ/MM/AAAA à H:i:s
-							</span>
+							Description abrégée de la recherche de partenaire... <a href="{{ path('m2l_annonces_view', { 'id' : 1 }) }}">Voir plus</a>
 						</p>
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2" class="annonce-date">
+						<span>
+							JJ/MM/AAAA à H:i:s
+						</span>
 					</td>
 				</tr>
 			</table>
