--- a/web/css/base.css
+++ b/web/css/base.css
@@ -265,6 +265,17 @@ LISTES LIGUES
 /*******************
 LISTE DES ANNONCES
 *******************/
+.pseudo-utilisateur {
+	color: rgb(0, 114, 149);
+	font-weight: bold; 
+}
+.annonce-date {
+	padding: 3px;
+	text-align: right !important;
+	font-weight: bold;
+	color: rgb(140,140,140);
+}
+
 #annonces-liste {
 	list-style-type: none;
 	width: 800px;
@@ -299,16 +310,23 @@ LISTE DES ANNONCES
 	color: rgb(230,230,230);
 	background-color: rgb(0, 114, 149);
 }
+.annonce-preview h3 a {
+	color: white;
+}
+.annonce-preview h3 a:hover {
+	color: black;
+}
 .annonce-preview p {
 	margin: 0;
 }
 .annonce-preview p span {
 	font-weight: bold;
 }
-.annonce-preview .annonce-date {
-	position: relative;
-	top: 105px;
-	left: 140px;
+.annonce-preview p a {
+	font-weight: bold;
+	color: rgb(0, 114, 149);
+}
+.annonce-preview p a:hover {
 	color: rgb(140,140,140);
 }
 
@@ -318,13 +336,22 @@ AFFICHAGE D'UNE ANNONCE
 #annonce-view {
 	width: 800px;
 	margin: 0 auto;
+	background-color: white;
+	box-shadow: 5px 5px 10px rgb(150,150,150);
 }
 #annonce-view h3 {
-	margin-bottom: 10px;
+	margin: 0;
 	text-align: center;
 	font-weight: bold;
 	color: rgb(230,230,230);
 	background-color: rgb(0, 114, 149);
+}
+#annonce-view table th {
+	padding: 5px;
+}
+#annonce-view table td {
+	text-align: left;
+	vertical-align: top;
 }
 
 
