Relations et affichage des utilisateurs dans les annonces

--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/index.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/index.html.twig
@@ -8,7 +8,7 @@
 					<tr>
 						<td class="img-user">
 							<img src="#" alt="Avatar de l'utilisateur"><br/>
-							<span class="pseudo-utilisateur">Nom de l'utilisateur</span>
+							<span class="pseudo-utilisateur">user</span>
 						</td>
 						<td class="annonce-preview">
 							<h3><a href="{{ path('m2l_annonces_view', { 'id' : annonce.id }) }}">{{ annonce.titre }}</a></h3>
