--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
@@ -11,7 +11,7 @@
 			<tr>
 				<td class="img-user">
 					<div>
-						<span class="pseudo-utilisateur">Nom de l'utilisateur</span><br/>
+						<span class="pseudo-utilisateur">{{ user.username }}</span><br/>
 						<img src="#" alt="Avatar de l'utilisateur">
 					</div>
 				</td>
