--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
@@ -18,7 +18,7 @@
 				<td>
 					<div class="annonce-preview">
 						<p>
-							<span>Ligue</span><br/>
+							<span>{{ ligue.nom }}</span><br/>
 							<span>Ville :</span><br/>
 							<span>Description :</span><br/>
 							{{ annonce.description }}
