--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
@@ -12,7 +12,7 @@
 				<td class="img-user">
 					<div>
 						<span class="pseudo-utilisateur"><a href="{{ path('m2l_profil_view', {'id': user.id}) }}">{{ user.username }}</a></span><br/>
-						<img src="#" alt="Avatar de l'utilisateur">
+						<img src="http://localhost/m2l/web/img/avatar.png" alt="Avatar de l'utilisateur">
 					</div>
 				</td>
 				<td>
