--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/index.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/index.html.twig
@@ -7,7 +7,7 @@
 				<table>
 					<tr>
 						<td class="img-user">
-							<img src="http://openclassrooms.com/bundles/common/images/avatar_defaut.png?1e6e75ff4w32b" alt="Avatar de l'utilisateur"><br/>
+							<img src="http://localhost/m2l/web/img/avatar.png" alt="Avatar de l'utilisateur"><br/>
 							<span class="pseudo-utilisateur">
 								<a href="{{ path('m2l_profil_view', {'id': annonce.user.id}) }}">
 									{{ annonce.user.username }}
