--- a/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
+++ b/src/M2L/AnnoncesBundle/Resources/views/Annonces/viewAnnonce.html.twig
@@ -24,7 +24,7 @@
 							{{ annonce.description }}
 						</p>
 						<p>
-							<a href="{{ path('messagerie_new_msg_user', {'user': user.id}) }}">Envoyer un message</a>
+							<a href="{{ path('messagerie_new_msg_user', {'user': user.username}) }}">Envoyer un message</a>
 						</p>
 					</div>
 				</td>
