--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -27,6 +27,7 @@
                     <li><a href="{{ path('m2l_annonces_add') }}">Ajouter une annonce</a></li>
                     <li><a href="{{ path('m2l_profil_edit') }}">Modifier mon profil</a></li>
                     <li><a href="{{ path('m2l_annonces_post') }}">Mes annonces</a></li>
+                    <li><a href="{{ path('messagerie_homepage') }}">Messagerie</a></li>
                     <li><a href="{{ path('logout') }}">Déconnexion</a></li>
                     {% endif %}
                     
